2004-09-13  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Trivial cleanup to remove compiler warnings.

	* term/post.trm: Keep track of whether or not the macro definitions
	required for enhanced text mode have been written to the output file
	yet.  If enhanced text mode is enabled after the terminal has already
	been initialized, make sure that the macros are added to the next
	output page.  This allows, for example,
	    setenv GNUTERM post;  gnuplot all.dem > all.ps
	Without this fix, the output pages following the enhanced text demo
	are corrupted. An alternative would be to write the enhanced text
	macros in the %%Prolog for every PostScript output file regardless of
	whether enhanced text mode has been selected.

2004-09-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c src/mouse.c src/parse.c src/parse.h: Rename utility
	function get_udv(char *name) to be add_udv_by_name(char *name), since
	this is what it really does.

	* src/fit.c (setvar): Simplify existing code by using add_udv_by_name.

	* src/set.c (set_termoptions): Update comment explaining this routine.

	* src/plot3d.c (eval_3dplots): Surface plots are no longer the only
	plot style that can have four 'using' specs; remove the error check 
	that incorrectly prevents this.

	* src/plot3d.c (get_3ddata set_plot_with_palette) 
	src/plot2d.h src/plot2d.c (store_label): Allow palette color options
	for text in "{s}plot with labels textcolor palette ...".
	
	* src/set.c (parse_colorspec): If "tc palette" is specified with no
	further suboptions, default to "tc palette z".

	* src/plot3d.c (get_3ddata): Allow palette color options in cylindrical
	and spherical coordinate modes also.

2004-09-09  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Update the comment on plot-time evaluation of 
	PostScript language level support.

2004-09-09  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/cgm.trm, term/eepic.trm, term/emf.trm,